syntax = "proto3";

package sandbox;

import "error.proto";

option go_package = "./pb";

message Requirements {
  string HardwareInput = 1;
  string SnapshotUrl = 2;
  repeated string Image = 3;
  repeated string ServiceName = 4;
  int32 NumberOfInstance = 5;
}

service Sandbox {
  rpc CreateNewEnvironment(CreateNewEnvironmentRequest)
      returns (CreateNewEnvironmentResponse);
}

message CreateNewEnvironmentRequest {
  string Publickey = 1;
  Requirements Requirements = 2;
  string Signature = 6;
}

message CreateNewEnvironmentResponse {
  bool Success = 1;
  string EnvID = 2;
  ErrorCode ErrorCode = 3;
  string ErrorMessage = 4;
}
